64) kernel: net: bridge: skip BROUTE hook if BRIDGE_EBT_BROUTE module is not enabled.<br>
65) kernel: net: bridge: fix broken ebtables on BRIDGE_NETFILTER disabled.<br>
66) kernel: net: bridge: netfilter: optimization by exclude unused modules.<br>
67) kernel: net: bridge: group bridge code closer with netcore and netfilter (improve performance).<br>
68) kernel: net: bridge: avoid OOPS if root port not found.<br>
69) kernel: net: bridge: disable softirqs around br_fdb_update to avoid lockup.<br>
70) kernel: net: fix race condition in several drivers when reading stats.<br>
71) kernel: net: tcp: shrink tcp6_timewait_sock by one cache line.<br>
72) kernel: net: tcp: fix get_timewait4_sock() delay computation on 64bit.<br>
73) kernel: net: tcp: remove redundant checks.<br>
74) kernel: net: flow_dissector: Pre-initialize ip_proto in __skb_flow_dissect().<br>
75) kernel: net: ipv6: fix possible use after free of dev stats.<br>
76) kernel: net: cleanup unsigned to unsigned int.<br>
77) kernel: net: inet: remove BUG_ON() in twsk_destructor().<br>
78) kernel: net: skb_defer_rx_timestamp should check for phydev before setting up classify.<br>
79) kernel: net: avoid gcc miss optimization regression in data rx path.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~95%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need add in wireless->basic fast roaming tune table (parametrs see in /etc/scripts/wifi_roaming.sh, only 76x2 drivers).<br>
4) need add in wireless->advanced BandSteering option if CONFIG_BAND_STEERING=y.<br>
5) need add in wireless->advanced IEEE80211H option (need for 5GHz outdor AP sertifications, this 1/0 per bssid param with ; divider).<br>
6) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
7) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
8) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>