@@ -712,6 +712,63 @@ error:
 }
 #endif
 
+static int getHWStatsBuilt(int eid, webs_t wp, int argc, char_t **argv) {
+#ifdef CONFIG_RAETH_SNMPD
+	return websWrite(wp, T("1"));
+#else
+	return websWrite(wp, T("0"));
+#endif
+}
+
+#ifdef CONFIG_RAETH_SNMPD
+static int getHWStatistic(int eid, webs_t wp, int argc, char_t **argv) {
+	char buf[1024];
+	int i, wan_port;
+	char_t port_buf[32];
+	unsigned long long rx_count[6], tx_count[6];
+
+	FILE *fp = fopen(PROC_SNMP, "r");
+	if (fp == NULL) {
+		printf("goahead: no snmp?\n");
+		return -1;
+	}
+
+	while (buf == fgets(buf, 1024, fp)) {
+		if ( 6 == sscanf(buf, "rx64 counters: %llu %llu %llu %llu %llu %llu\n", &rx_count[0], &rx_count[1], &rx_count[2], &rx_count[3], &rx_count[4], &rx_count[5]))
+			continue;
+		if ( 6 == sscanf(buf, "tx64 counters: %llu %llu %llu %llu %llu %llu\n", &tx_count[0], &tx_count[1], &tx_count[2], &tx_count[3], &tx_count[4], &tx_count[5]))
+			break;
+	}
+	fclose(fp);
+
+	wan_port = atoi(nvram_get(RT2860_NVRAM, "wan_port"));
+
+	websWrite(wp, T("<tr>\n"));
+	websWrite(wp, T("<td class=\"head\" id=\"stats_rx\">Rx</td>\n"));
+	for (i = 0; i < 5; i++)
+	{
+		if (wan_port == 0)
+			scale(port_buf, rx_count[i]);
+		else
+			scale(port_buf, rx_count[wan_port-i]);
+		websWrite(wp, T("<td>%s</td>\n"), port_buf);
+	}
+	websWrite(wp, T("</tr>\n"));
+	websWrite(wp, T("<tr>\n"));
+	websWrite(wp, T("<td class=\"head\" id=\"stats_tx\">Tx</td>\n"));
+	for (i = 0; i < 5; i++)
+	{
+		if (wan_port == 0)
+			scale(port_buf, tx_count[i]);
+		else
+			scale(port_buf, tx_count[wan_port-i]);
+		websWrite(wp, T("<td>%s</td>\n"), port_buf);
+	}
+	websWrite(wp, T("</tr>\n"));
+	return 0;
+}
+#endif
+
 void formDefineManagement(void)
 {
 	websFormDefine(T("setSysAdm"), setSysAdm);
@@ -735,6 +792,10 @@ void formDefineManagement(void)
 	websAspDefine(T("getLANRxPacketASP"), getLANRxPacketASP);
 	websAspDefine(T("getLANTxPacketASP"), getLANTxPacketASP);
 	websAspDefine(T("getAllNICStatisticASP"), getAllNICStatisticASP);
+	websAspDefine(T("getHWStatsBuilt"), getHWStatsBuilt);
+#ifdef CONFIG_RAETH_SNMPD
+	websAspDefine(T("getHWStatistic"), getHWStatistic);
+#endif
 	websFormDefine(T("LoadDefaultSettings"), LoadDefaultSettings);
 #ifdef CONFIG_SYSLOGD
 	websFormDefine(T("syslog"), syslog);
